--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="best coffee,recipes,menu" />
     <meta name="description" content="coffeeshop" />
     <link rel="shortcut icon" href="./favicon.ico" />
+     <link rel="normalize" href="./vendor/normalize.css"/>
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
