--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Coffee Shop</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Ameera Marzouq" />
+    <meta name="author" content="George Polistin" />
     <meta name="keywords" content="best coffee,recipes,menu" />
     <meta name="description" content="coffeeshop" />
     <link rel="shortcut icon" href="./favicon.ico" />
-     <link rel="normalize" href="./vendor/normalize.css"/>
+     <link type="text/css" rel="stylesheet" href="./vendor/normalize.css"/>
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
